<resources>

    <string name="app_name">Agento</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_agento">Agento</string>
    <string name="username">Usuário:</string>
    <string name="password">Senha:</string>
    <string name="login">Entrar</string>
    <string name="register">Cadastrar</string>
    <string name="forget_password">Esqueci minha Senha</string>
    <string name="email">Email:</string>
    <string name="title_agento_cadastro">Cadastro</string>
    <string name="cancelar">Cancelar</string>
    <string name="erro">ERRO</string>
    <string name="sucesso_cadastro">Cadastro realizado com sucesso</string>
    <string name="usuario_senha_invalidos">Usuário ou senha inválidos</string>
    <string name="title_activity_agento_evento">Eventos</string>
    <string name="title_activity_edita_evento">EditaEvento</string>
    <string name="salvar">Salvar</string>
    <string name="fechar">Fechar</string>
    <string name="voltar">Voltar</string>
    <string name="completar">Completar</string>

</resources>