<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <EditText
        android:id="@+id/usuarioEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" >

    </EditText>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_background"
        android:onClick="esqueciSenhaRedirecionamento"
        android:text="@string/forget_password"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button_background_1"
        android:onClick="entrar"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background_1"
        android:onClick="registrarRedirecionamento"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/senhaEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usuarioEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/padding_medium"
        android:text="@string/app_name"
        android:textColor="@color/branco"
        android:textSize="@dimen/padding_elarge"
        tools:context=".MainActivity" />

</RelativeLayout>
